--- a/android/src/main/res/values/strings.xml
+++ b/android/src/main/res/values/strings.xml
@@ -1,17 +1,10 @@
 <resources>
-    <string name="app_name">EdgeDetection</string>
-    <string name="camera_grant">Grant camera permission!</string>
-    <string name="press_again_logout">Press back again.</string>
-    <string name="crop">Crop</string>
-    <string name="save">Save</string>
-    <string name="export">Export</string>
-    <string name="delete">Delete</string>
-    <string name="enhance">Enhance</string>
-    <string name="black">Black White</string>
-    <string name="rotate">Rotate</string>
+    <string name="crop">Ritaglia</string>
+    <string name="save">Salva</string>
+    <string name="black"> B/W </string>
+    <string name="rotate">Ruota</string>
     <string name="reset">Reset</string>
-    <string name="scan">Scanning</string>
-
-    <string name="next">Next</string>
-    <string name="done">Done</string>
+    <string name="scan">Scansiona</string>
+    <string name="done">Fatto</string>
+    <string name="colors">Colori</string>
 </resources>
